--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ examples/diode/bayesim_state.h5
 examples/TE/new_sim_outputs_1.h5
 examples/TE/new_sim_points_1.h5
 examples/bayesim_states/*
+examples/TE/PMF_*.h5
