--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ examples/TE/new_sim_outputs_1.h5
 examples/TE/new_sim_points_1.h5
 examples/bayesim_states/*
 examples/TE/PMF_*.h5
+examples/TE/*.tar.gz
