--- a/.gitignore
+++ b/.gitignore
@@ -110,5 +110,5 @@ examples/TE/states/*
 examples/TE/PMF_*.h5
 examples/TE/*.tar.gz
 examples/TE/.DS_Store
-examples/*/*PMF*.h5
-examples/*/*obs_list.h5
+examples/*/PMFs/*
+examples/*/obs_lists/*
