--- a/.gitignore
+++ b/.gitignore
@@ -102,11 +102,6 @@ ENV/
 examples/diode/PMF_*.h5
 examples/diode/new_sim_*.h5
 examples/diode/bayesim_state.h5
-examples/TE/new_sim_outputs_1.h5
-examples/TE/new_sim_points_1.h5
-examples/TE/states/*
-examples/TE/PMF_*.h5
-examples/TE/*.tar.gz
-examples/TE/.DS_Store
+examples/TE/*
 examples/*/PMFs/*
 examples/*/obs_lists/*
